# legend_of_daughter

./: CMakeLists.txt  main.cpp
graphics/: axel_front_v2.aseprite  axel_front_v3.aseprite  axel_front_v4.aseprite
graphics/wip/: lili.aseprite  lili_top_BACK.aseprite  lili_top_back_left.aseprite  lili_top_back_right.aseprite  lili_top_front.aseprite  lili_top_front_leftt.aseprite  lili_top_front_right.aseprite  lili_walk_leftt.aseprite  lili_walk_right.aseprite  white_adventure_girl.aseprite
graphics/world_of_solaria/New/16x16/Base/Base Aseprite/Base Character Aseprite/: Base Attack (One Hand Weapons).aseprite  Base Axe.aseprite  Base Bow.aseprite  Base Hammer.aseprite  Base Idle.aseprite  Base Pickaxe.aseprite  Base Walk.aseprite  Base Yawn.aseprite
graphics/world_of_solaria/New/16x16/Base/Base Aseprite/Base Tools Aseprite/: Base Arrow Hit.aseprite  Base Arrow.aseprite  Base Bow.aseprite
graphics/world_of_solaria/New/16x16/Charlie/Charlie Aseprite/Charlie Character Aseprite/: Charlie Attack (One Hand Weapons).aseprite  Charlie Axe.aseprite  Charlie Idle.aseprite
graphics/world_of_solaria/New/16x16/Odderf New/Odderf New Aseprite/Odderf New Character Aseprite/: Odderf New Hammer.aseprite
src/: CMakeLists.txt  animation.cpp  animation.hpp  animationFrame.hpp  camera.cpp  camera.hpp  constant.hpp  game.cpp  game.hpp  game_controller.cpp  game_controller.hpp  game_object.cpp  game_object.hpp  input_controller.cpp  input_controller.hpp  map.cpp  map.hpp  player.cpp  player.hpp  scene.cpp  scene.hpp  sprite_sheet.cpp  sprite_sheet.hpp  transform.cpp  transform.hpp
src/_old/: game_state.cpp  game_state.hpp  gs_game.cpp  gs_game.hpp  gs_title_screen.cpp  gs_title_screen.hpp  state_machine.cpp  state_machine.hpp
(+3 files in other folders)
